<resources>
    <string name="app_name">App Proyecto Final</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_clientes">Clientes</string>
    <string name="title_activity_login">a</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo electrónico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">Esta dirección de email es invalido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Es campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registro_de_cliente">REGISTRO DE CLIENTE</string>
    <string name="n_documento_o_ruc">N° documento o RUC:</string>
    <string name="ingrese_su_nombre_o_raz_n_social">Ingrese su nombre o razón social</string>
    <string name="ingrese_su_dni_o_ruc">Ingrese su DNI o RUC</string>
    <string name="ingrese_su_direcci_n">Ingrese su dirección</string>
    <string name="ingrese_su_email">Ingrese su email</string>
    <string name="ingrese_su_tel_fono">Ingrese su teléfono</string>
    <string name="ingrese_su_contrase_a">Ingrese su contraseña</string>
    <string name="cancelar">Cancelar</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="registrar_cliente">Registrar cliente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registro_de_solicitud_de_carga">REGISTRO DE SOLICITUD DE CARGA</string>
    <string name="descripci_n_de_la_carga">Descripción de la carga</string>
    <string name="clase_de_carga">Clase de carga:</string>
    <string name="tipo_de_carga">Tipo de carga:</string>
    <string name="categoria_de_carga">Categoria de carga:</string>
    <string name="peso_de_la_carga">Peso de la carga</string>
    <string name="fecha_de_partida">Fecha de partida</string>
    <string name="hora_de_partida">Hora de partida</string>
    <string name="fech_de_partida">Fech. de partida</string>
    <string name="direcci_n_de_partida">Dirección de partida</string>
    <string name="direcci_n_de_llegada">Dirección de llegada</string>
    <string name="monto_total">Monto total</string>
    <string name="registrar_solicitud_de_carga">Registrar solicitud de carga</string>
    <string name="categ_de_carga">Categ. de carga:</string>
    <string name="distancia_a_recorrer">Distancia a recorrer</string>
    <string name="registrar_solicitud">Registrar solicitud</string>
    <string name="listar_solicitudes">Listar solicitudes</string>
    <string name="direcci_n_de_llegadas">Dirección de llegada:</string>
    <string name="direcci_n_de_partidas">Dirección de partida:</string>
    <string name="fecha_de_partidas">Fecha de partida:</string>
    <string name="hora_de_partidas">Hora de partida:</string>
    <string name="monto">Monto:</string>
    <string name="peso">Peso:</string>
    <string name="tarifa">Tarifa:</string>
    <string name="pago_de_solicitud">Pago de solicitud</string>
    <string name="nombre_de_la_entidad_financiera">Nombre de la entidad financiera</string>
    <string name="n_mero_de_operaci_n">Número de operación</string>
    <string name="solicitud">Solicitud:</string>
    <string name="pagar_solicitud">Pagar solicitud</string>
    <string name="registrar_pago">Registrar pago</string>

    <string-array name="filtro_cliente">
        <item>Todos</item>
        <item>DNI o RUC</item>
        <item>Nombre o razon social</item>
        <item>Estado</item>
    </string-array>
</resources>