<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_registrar_solicitud"
            android:icon="@drawable/ic_registrar_solicitud"
            android:title="@string/registrar_solicitud" />

        <item
            android:id="@+id/nav_listar_solicitud"
            android:icon="@drawable/ic_listar_solicitudes"
            android:title="@string/listar_solicitudes" />
        <item
            android:id="@+id/nav_pagar_solicitud"
            android:icon="@drawable/ic_pagar_solicitud"
            android:title="@string/pagar_solicitud" />
    </group>

    <item android:title="Sesion">
        <menu>
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_cerrar_sesion"
                android:title="Cerrar Sesion" />
        </menu>
    </item>

</menu>
