<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".RegistrarSolicitudFragment">

    <TextView
        android:id="@+id/titulo_formulario_registro_solicitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_de_solicitud_de_carga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_txt_descripcion_carga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/descripci_n_de_la_carga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo_formulario_registro_solicitud" />

    <TextView
        android:id="@+id/txt_view_clase_carga"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/clase_de_carga"
        app:layout_constraintBottom_toBottomOf="@id/spinner_clase_carga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinner_clase_carga" />

    <Spinner
        android:id="@+id/spinner_clase_carga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_view_clase_carga"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_descripcion_carga" />

    <TextView
        android:id="@+id/txt_view_tipo_carga"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_carga"
        app:layout_constraintBottom_toBottomOf="@id/spinner_tipo_carga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinner_tipo_carga" />

    <Spinner
        android:id="@+id/spinner_tipo_carga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_view_tipo_carga"
        app:layout_constraintTop_toBottomOf="@id/spinner_clase_carga" />

    <TextView
        android:id="@+id/txt_view_categoria_carga"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/categ_de_carga"
        app:layout_constraintBottom_toBottomOf="@id/spinner_categoria_carga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/spinner_categoria_carga" />

    <Spinner
        android:id="@+id/spinner_categoria_carga"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_view_categoria_carga"
        app:layout_constraintTop_toBottomOf="@id/spinner_tipo_carga" />

    <LinearLayout
        android:id="@+id/lin_lay_hora_fecha_partida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_categoria_carga">

        <EditText
            android:id="@+id/edit_txt_hora"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:enabled="false"
            android:layout_weight="1"
            android:hint="@string/hora_de_partida" />

        <ImageButton
            android:id="@+id/img_btn_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_hora" />

        <EditText
            android:id="@+id/edit_txt_fecha"
            android:layout_width="0dp"
            android:enabled="false"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/fech_de_partida" />

        <ImageButton
            android:id="@+id/img_btn_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:src="@drawable/ic_calendario" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_direccion_partida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:layout_marginTop="10dp"
        android:hint="@string/direcci_n_de_partida"
        app:layout_constraintEnd_toStartOf="@id/img_btn_dir_partida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lin_lay_hora_fecha_partida" />

    <ImageButton
        android:id="@+id/img_btn_dir_partida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_mapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text_direccion_partida"
        app:layout_constraintTop_toBottomOf="@id/lin_lay_hora_fecha_partida" />

    <EditText
        android:id="@+id/edit_text_direccion_llegada"
        android:layout_width="0dp"
        android:enabled="false"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/direcci_n_de_llegada"
        app:layout_constraintEnd_toStartOf="@id/img_btn_dir_llegada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_direccion_partida" />

    <ImageButton
        android:id="@+id/img_btn_dir_llegada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_mapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_text_direccion_llegada"
        app:layout_constraintTop_toBottomOf="@id/edit_text_direccion_partida" />


    <EditText
        android:id="@+id/edit_txt_peso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/peso_de_la_carga"
        app:layout_constraintEnd_toStartOf="@id/edit_txt_monto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_direccion_llegada" />

    <EditText
        android:id="@+id/edit_txt_monto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:enabled="false"
        android:hint="@string/monto_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edit_txt_peso"
        app:layout_constraintTop_toBottomOf="@id/edit_text_direccion_llegada" />

    <Button
        android:id="@+id/btn_registrar_solicitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/registrar_solicitud_de_carga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_txt_peso" />

</androidx.constraintlayout.widget.ConstraintLayout>