<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="5dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direcci_n_de_llegadas"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/txt_direccion_llegada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Dirección de llegada:" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direcci_n_de_partidas"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/txt_direccion_partida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Dirección de partida:" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_de_partidas"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/txt_fecha_partida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Fecha de partida:"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hora_de_partidas"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/txt_hora_partida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    tools:text="Hora de partida:"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monto"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/txt_monto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Monto:" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/peso"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/txt_peso_carga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight = "5dp"
                    tools:text="Peso:" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tarifa"
                    android:textStyle="bold"
                    android:layout_marginEnd="5dp"/>

                <TextView
                    android:id="@+id/txt_tarifa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight = "5dp"
                    tools:text="Tarifa:" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>